# sql-app-rust

./: .env  .gitignore  Cargo.toml  README.md  nginx.conf
src/: lib.rs  main.rs  web.html
src/my-app/src/: App.js
templates/: index.html
